syntax = "proto3";

option java_package = "ru.neka.userservice";
option java_outer_classname = "UserServiceStub";

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  string user_id = 1;
}

message UserResponse {
  string user_id = 1;
  string name = 2;
  string email = 3;
}
